# diamond-kata

./: LICENSE  README.md  diamond-kata.cabal  property-based-haskell.cabal
app/: Main.hs
src/: DiamondKata.hs
test/: Spec.hs
