name:                diamond-kata
version:             0.0.0.1
synopsis:            Implimentation of Diamond Kata
description:         Exploring Property Based TDD with QuickCheck
homepage:            https://github.com/qqii/diamond-kata#readme
license:             BSD3
license-file:        LICENSE
author:              Qi-rui Chen
maintainer:          Qi-rui.Chen.2015@my.bristol.ac.uk
copyright:           2016 Qi-rui
category:            Beginner
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DiamondKata
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable diamond-kata
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , diamond-kata
  default-language:    Haskell2010

test-suite diamond-kata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , diamond-kata
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/qqii/diamond-kata
